Wed Apr 19 23:49:36 2006  Tim Janik  <timj@gtk.org>

	* configure.in: fixed inverted WITH_PERLRULE check.

	* beast-gtk/gxk/Makefile.am: fixed up clean rules so stamp files
	are properly deleted and dependent files are properly built.

Wed Apr 19 02:30:34 2006  Tim Janik  <timj@gtk.org>

	* Makefile.am: added specialized "distcheck" rule that disables a 
	recursive make dist. the reason for which is explained here:
	http://blogs.gnome.org/view/timj/2006/04/18/0

	* docs/beast.1.doxi:
	* beast-gtk/bstmain.c: implemented --merge.

	* configure.in: provide AM conditional WITH_PERLRULE.

	* beast-gtk/icons/Makefile.am:
	* configure.in: removed STRIP_* cruft. 

Tue Apr 18 21:25:00 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* beast-gtk/bstmain.c: Fix double initialization of the application
	name (which causes glib to print a warning, which renders
	--g-fatal-warnings useless for debugging).
	Removed obsolete g_set_prgname (birnet_init is responsible for that).

Sun Apr 16 20:33:57 2006  Tim Janik  <timj@gtk.org>

	* library/instruments/bqs-merp-pad.bse: added new pad string.

Sun Apr 16 18:35:12 2006  Tim Janik  <timj@gtk.org>

	* library/instruments/bqs-moog-saw-bass.bse: added new bass instrument
	from Stefan Westerfeld.

Sun Apr 16 18:31:05 2006  Tim Janik  <timj@gtk.org>

	* library/instruments/Makefile.am: 
	* library/instruments/bqs-fretless-bass.bse: CVS renamed "base" to "bass".

Sun Apr 16 17:43:23 2006  Tim Janik  <timj@gtk.org>

	* Makefile.am: fixup distuninstallcheck:-rule which reports 
	not uninstalled files created by update-mime-database(1).

Sat Apr 15 03:08:47 2006  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstmain.c: document --bse-force-fpu and print processor
	detection information.

	* configure.in: profide PLUGIN_FLAGS, FPU_FLAGS and SSE_FLAGS. define
	BSE_WITH_SSE_FLAGS for bse runtime logic.

	* acbeast.m4: cosmetic change.

	* web/download.doxi: provide viewcvs link.

Thu Apr 13 23:59:22 2006  Tim Janik  <timj@gtk.org>
